focus the whole window if there is no tabbable content. bug 50881 r=attinasi,bryner,hyatt,saari